tests/standalone-tests/valid/narrowing-or.lua
local txt = nil
local always = true

if txt == nil or always then
        txt = "?"
end

string.len(txt .. "hello")
