tests/standalone-tests/failing/narrowing-undetected.lua
local txt = nil
local always = true

if txt == nil and always then
        txt = "?"
end

string.len(txt .. "hello")
